# ResearchOps-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605140001_initial_phase1.py  202605140002_phase2_extraction.py  202605140003_phase3_search.py  202605140004_phase4_rbac.py  202605140005_phase5_mcp_agents.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/mcp/: __init__.py  auth.py  main.py  schemas.py  server.py  service.py
backend/app/api/: routes.py
backend/app/audit/: __init__.py  schemas.py
backend/app/auth/: __init__.py  access.py  dependencies.py  entra.py  schemas.py  service.py
backend/app/core/: config.py  logging.py  middleware.py  observability.py
backend/app/dashboard/: __init__.py  schemas.py
backend/app/database/: models.py  session.py
backend/app/documents/: __init__.py  azure_storage.py  schemas.py  service.py  storage.py
backend/app/extraction/: __init__.py  azure_client.py  normalizer.py  schemas.py  service.py  worker.py
backend/app/search/: __init__.py  azure_client.py  chunking.py  schemas.py  service.py  worker.py
backend/app/workflows/: __init__.py  chains.py  schemas.py  service.py
backend/tests/: conftest.py  test_approvals.py  test_auth.py  test_azure_config.py  test_chunking.py  test_extraction.py  test_mcp.py  test_observability.py  test_rbac.py  test_search.py  test_storage.py  test_upload_api.py
docs/: phase5-mcp-agent-workflow.md  (+2 more)
(+73 files in other folders)
