[project]
name = "researchops-backend"
version = "0.1.0"
description = "Phase 1 FastAPI backend for ResearchOps Azure Agent Platform"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.47.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "sqlalchemy[asyncio]==2.0.49",
  "alembic==1.18.4",
  "asyncpg==0.31.0",
  "psycopg[binary]==3.3.4",
  "python-multipart==0.0.28",
  "httpx==0.28.1",
  "orjson==3.11.9",
  "structlog==25.5.0",
  "azure-ai-documentintelligence==1.0.2",
  "azure-storage-blob==12.28.0",
  "azure-identity==1.25.3",
  "azure-core==1.41.0",
]

[dependency-groups]
dev = [
  "coverage==7.14.0",
  "mypy==2.1.0",
  "pyright==1.1.409",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.13",
  "testcontainers==4.14.2",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings --cov=app --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.mypy]
python_version = "3.14"
plugins = []
strict = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["app", "tests"]
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnusedFunction = false
